--- a/src/app/styles/global.scss
+++ b/src/app/styles/global.scss
@@ -107,19 +107,21 @@ header {
   height: 100%;
 
   .swiper-slide {
+    display: flex;
+    align-items: center;
     transition: transform 0.15s ease-in;
     transform: translateY(5rem) !important;
 
     &.swiper-slide-active,
     &.swiper-slide-duplicate-active {
-      transform: translateY(0) !important;
+      transform: translateY(-2.5rem) !important;
     }
 
     &.swiper-slide-next,
     &.swiper-slide-prev,
     &.swiper-slide-duplicate-next,
     &.swiper-slide-duplicate-prev {
-      transform: translateY(2.5rem) !important;
+      transform: translateY(0rem) !important;
     }
   }
 
